--- a/index.css
+++ b/index.css
@@ -58,22 +58,25 @@ table {
 /* ==== BASE STYLES ==== */
 body {
 	font-family: 'Roboto', sans-serif;
-	font-size: 18px;
+	font-size: 1.125rem;
 	color: #333;
-	row-gap: 32px;
+	row-gap: 2rem;
 }
 h1, h2 {
 	font-family: 'Open Sans', sans-serif;
 }
 h1 {
-	font-size: 28.8px;
+	font-size: 1.8rem;
 }
 h2 {
-	font-size: 25.6px;
+	font-size: 1.6rem;
 	color: #E5127D;
 }
 .header p {
-	font-size: 18px;
-	letter-spacing: 2px;
+	font-size: 1.125rem;
+	letter-spacing: 0.125rem;
 	color: #8C8E9B;
+}
+.picture {
+	width: 100%;
 }
