--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-.header {
+/*.header {
     background-color: rgba(221, 53, 255, 0.418);
 }
 .main {
@@ -54,7 +54,7 @@ table {
 }
 .article {
     background-color: rgba(9, 255, 0, 0.418);
-}
+}*/
 /* ==== BASE STYLES ==== */
 * {
 	box-sizing: border-box;
@@ -84,11 +84,51 @@ h2 {
 	width: 100%;
 }
 /* ==== LAYOUT STYLES ==== */
+h1,h2,h3,h4,h5,h6,hgroup,ul,ol,dd,p,figure,pre,table,fieldset,hr, img, .header, .main {
+	margin-bottom: 1rem;
+}
+/* Main Header Styles */
 .header {
 	text-align: center;
 	padding: 1.25rem;
+	color: #fff;
+	background-color: #42444E;
 }
+/* Article Styles */
 .article {
 	width: 95%;
-	margin: 1.25rem auto;
+	margin: 0 auto 1rem;
+	padding: 0,3125rem;
+}
+.picture {
+	width: 100%;
+}
+/* ==== COMPONENT STYLES ==== */
+.button {
+	display: inline-block;
+	border: 1px solid #8C8E9B;
+	color: #8C8E9B;
+	border-radius: 10px;
+	padding-right: 5px;
+	padding-left: 5px;
+	margin: 5px;
+	width: 100px;
+	font-family: 'Open Sans', sans-serif;
+}
+.button:hover {
+	border: 1px solid #B60E63;
+}
+.load {
+	display: block;
+	text-align: center;
+	padding: 0.625rem;
+	font-size: 1.25rem;
+	color: #8C8E9B;
+}
+a {
+	color: #E5127D;
+	text-decoration: none;
+}
+a:hover {
+	color: #B60E63;
 }
