--- a/index.css
+++ b/index.css
@@ -94,6 +94,34 @@ h1,h2,h3,h4,h5,h6,hgroup,ul,ol,dd,p,figure,pre,table,fieldset,hr, img, .header, 
 	color: #fff;
 	background-color: #42444E;
 }
+	@media (min-width: 768px) {
+		.header {
+			position: fixed;
+			top: 0;
+			height: 100%;
+			width: 33.3%;
+		}
+	}
+	@media (min-width: 1025px) {
+		.header {
+			width: 20.625px;
+		}
+	}
+/* Primary Content Wrppaer Styles*/
+@media (min-width: 768px) {
+	.main {
+		float: right;
+		width: 66.6%;
+		max-width: 812px;
+	}
+}
+@media (min-width: 1025px) {
+	.main {
+		float: none;
+		position: absolute;
+		left: 20.625%;
+	}
+}
 /* Article Styles */
 .article {
 	width: 95%;
